tests/paczka1/fuzzy1/84549337.err
Error in line 5: fySWy A101 59,9
Error in line 6: fySWy A595 65,8
Error in line 16: MuoEf2vtA0S A595 50,5
Error in line 19: MuoEf2vtA0S S862 80,5
Error in line 22: MuoEf2vtA0S A442 44,0
Error in line 23: MuoEf2vtA0S A101 32,7
Error in line 24: MuoEf2vtA0S A595 63,2
